# pebble

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pebble.cmd
compiler/ast/: Cargo.toml
compiler/macros/: Cargo.toml
compiler/parser/: Cargo.toml
compiler/resolver/: Cargo.toml
compiler/resolver/src/: lib.rs
crates/analyser/: Cargo.toml
crates/analyser/src/: checker.rs  expr_analyzer.rs  lib.rs  resolver.rs  symbol.rs  symbol_old.rs  test.rs  tests.rs  value.rs
crates/cli/: Cargo.toml
crates/errors/: Cargo.toml
crates/interpreter/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: _parser.rs  lib.rs  parser.rs  scanner.rs  test.rs
crates/parser/src/ast/: literal.rs  mod.rs  program.rs  statement.rs
crates/prepiler/: Cargo.toml
crates/repl/: Cargo.toml
crates/scanner/: Cargo.toml
crates/utils/: Cargo.toml
design/: board.md  colors.toml  config.schema.json  control statement.md  roadmap.md  statements.md  tokens.md
design/docs/: core.md  errors.md  nil.md  statements.md  variables_and_types.md
example/: example.peb  hello.peb
extensions/vscode-pebble/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md  x.json
server/: Cargo.toml
server/src/: lib.rs
src/: lib.rs  main.rs  result.txt
src/cli/: exit_with_error.rs  mod.rs
src/compiler/: mod.rs
src/utils/: stack.rs
template/: .gitignore  README.md  peb.info.json  pile.json
template/source/: ..peb  _.peb  main.peb
template/src/: ..peb  fs.peb  prelude.peb
(+62 files in other folders)
