[package]
name = "resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { version = "*", path = "../parser" }
ast = { version = "*", path = "../ast" }
errors = { version = "*", path = "../errors" }
