[package]
name = "analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
macros = { version = "*", path = "../macros" }
errors = { version = "*", path = "../errors" }
parser = { version = "*", path = "../parser" }
utils = { version = "*", path = "../utils" }
