[package]
name = "pebble_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pebble_utils = {version = "0.1.0", path = "../pebble_utils"}
pebble_scanner = {version = "0.1.0", path = "../pebble_scanner"}

[lib]
name = "pebble_parser"
path = "lib.rs"
